testsuite/tests/properties/invalid_node_builder/list_bad_type.lkt
import common_empty

@synthetic
class SyntheticLiteralList: ASTList[Literal] {
}

class Example: BaseExample {
    @exported
    @lazy
    prop: SyntheticLiteralList =
        SyntheticLiteralList.builder([]: NodeBuilder[FooNode]).build()
}
